--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,7 +2,9 @@ name: Build
 
 on:
   push:
-    branches: [ '*' ]
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "*" ]
 
 jobs:
   build:
